feat 코드리뷰 리펙토링 & 4단계 완성